--- a/Envirenement/templates/base.html
+++ b/Envirenement/templates/base.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Document</title>
+    <title>Département des Eaux et Forêts</title>
     <link rel="stylesheet" href="{{url_for('static' , filename = 'CSS/style.css')}}">
-
+    <link rel = "icon" href = "../static/images/logo/1.png" type = "image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 </head>
 <body>
@@ -14,9 +14,11 @@
             <a class="nav_bar_iteam" id="nav_bar_3" href="/service">ANNONCE</a>
             <a class="nav_bar_iteam" id="nav_bar_4" href="/contact">CONTACT</a>
         </div>
-        <div class="back">
-            <img src="http://www.eauxetforets.gov.ma/AccueilAR/SiteAssets/Style-Arb/img/logo.png">
-        </div>
+        <a href="/">
+            <div class="back">
+                <img src="http://www.eauxetforets.gov.ma/AccueilAR/SiteAssets/Style-Arb/img/logo.png">
+            </div>
+        </a>
     </div>
     {% block content %}
     {% endblock content %}
@@ -24,7 +26,7 @@
         <div class="footer_link">
             <div class="footer_about">
                 <h6 class="footer_all">À propos de la société</h6><br><br>
-                <p class="footer_info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, officia autem nulla animi non doloribus dicta esse? Nisi dolores esse vero</p>
+                <p class="footer_info">LA DIRECTION DES EAUX ET FORÊTS A POUR OBJECTIF DE FOURNIR TOUTES LES INFORMATIONS LIÉES AU DOMAINE ENVIRONNEMENTAL,</p>
             </div>
             <div class="footer_useful">
                 <h6 class="footer_all">Autre</h6><br>
@@ -42,9 +44,9 @@
             </div>
             <div class="footer_contact">
                 <h6 class="footer_all">Contact</h6><br>
-                <div class="footer_info_1">Essouira/Quariter Ras El MOl</div>
-                <div class="footer_info_1">+212 6 24 48 55 25</div>
-                <div class="footer_info_1">Essouira@gmail.com</div>
+                <div class="footer_info_1">Qartier Des Dunse /Essaouira</div>
+                <div class="footer_info_1">+212 6 00 00 00 00</div>
+                <div class="footer_info_1">Bouchradaif09@gmail.com</div>
             </div>
         </div>
         <div class="footer_email">
@@ -57,7 +59,7 @@
             </div>
         </div>
     </div>
-    <footer> Copyright © 2019 Le Département des Eaux et Forêts </footer>
+    <footer> Copyright © 2019 Le Département des Eaux et Forêts © Elaborer Par : Bouchra Daif</footer>
 <script src="{{url_for('static' , filename = 'JS/script.js')}}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
