--- a/Envirenement/templates/about.html
+++ b/Envirenement/templates/about.html
@@ -2,8 +2,17 @@
 {% block content %}
 <header class="about_header">
     <div class="contact_title">
-        <h5>à propos de nous</h5>
-        <h3 class="contact_mini_title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem molestiae quo reprehenderit, quisquam ab et atque aut quas quod maiores temporibus</h3>
+        <h5>A Propos De Nous</h5>
+        <h3 class="contact_mini_title">Une page spéciale pour présenter notre page et notre humble servante</h3>
+    </div>
+    <div class="shape">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 280">
+            <path fill-opacity="1">
+                <animate attributeName="d" dur="20000ms" repeatCount="indefinite"
+                    values="M0,160L48,181.3C96,203,192,245,288,261.3C384,277,480,267,576,234.7C672,203,768,149,864,117.3C960,85,1056,75,1152,90.7C1248,107,1344,149,1392,170.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z; M0,160L48,181.3C96,203,192,245,288,234.7C384,224,480,160,576,133.3C672,107,768,117,864,138.7C960,160,1056,192,1152,197.3C1248,203,1344,181,1392,170.7L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z;												 M0,64L48,74.7C96,85,192,107,288,133.3C384,160,480,192,576,170.7C672,149,768,75,864,80C960,85,1056,171,1152,181.3C1248,192,1344,128,1392,96L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z;
+                                                 M0,160L48,181.3C96,203,192,245,288,261.3C384,277,480,267,576,234.7C672,203,768,149,864,117.3C960,85,1056,75,1152,90.7C1248,107,1344,149,1392,170.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z;" />
+            </path>
+        </svg>
     </div>
 </header>
 <div class="contact_border">
@@ -12,7 +21,6 @@
 <div class="service">
     <div class="service_title">notre service</div>
     <div class="service_text">
-        
         <div class="service_image">
             <img id="change" src="../static/images/service/1.jpg" style="height: 417px; width: 100%;" >
         </div>
@@ -20,12 +28,12 @@
             <div> 
                 <h3 style="color: gray;">A PROPRE DE NOTRE SERVICE</h3><br>
                 <h2>UN GRANDE SERVICE AVEC GRANDE CAPACITER</h2><br>
-                <ul style="font-size: larger;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, iste. Culpa voluptates libero molestiae est unde eos. Eum fugiat error saepe animi, odio natus qui quidem obcaecati, ullam magni quod!</ul>
+                <ul style="font-size: larger;">Peu importe que nous soyons un groupe émergent, mais je suis notre femme de chambre intégrée et soumise au contrôle, tournant autour d'une hiérarchie, dont nous mentionnons</ul>
             </div>
             <div class="point">
-                <h3><li>&#10003;Lorem ipsum, dolor sit amet consectetur adipisicing elit</li></h3>
-                <h3><li>Lorem ipsum, dolor sit amet consectetur adipisicing elit</li></h3>
-                <h3><li>Lorem ipsum, dolor sit amet consectetur adipisicing elit</li></h3>
+                <h3>&#10003;informations précitées sont mises à jour quotidiennement</h3>
+                <h3>&#10003;Authentification intégrée pour les informations</h3>
+                <h3>&#10003;Une équipe sous votre encadrement tout au long semaine</h3>
             </div>
         </div>
     </div>
@@ -34,9 +42,9 @@
     <div class="about_file">
         <h1 style="margin-top:15%;">Notre équipe offre une gamme d'avantages</h1>
         <div class="point">
-            <h3><li>&#10003;Lorem ipsum, dolor sit amet consectetur adipisicing elit</li></h3>
-            <h3><li>Lorem ipsum, dolor sit amet consectetur adipisicing elit</li></h3>
-            <h3><li>Lorem ipsum, dolor sit amet consectetur adipisicing elit</li></h3>
+            <h3>&#10003;Informations environnementales</h3>
+            <h3>&#10003;A votre commande 24H/24h avec notre services</h3>
+            <h3>&#10003;plus d'un 100 Groupe Activer</h3>
         </div>
     </div>
     <div class="about_rate">
@@ -45,16 +53,16 @@
             <h6 style="font-size: larger;color: #ababab;">Informations environnementales</h6>
         </div>
         <div class="about_iteam">
-            <h3 style="font-size: 55px;font-family: 'Barlow', sans-serif;color: green;margin-top:50px;">1200+</h3>
-            <h6 style="font-size: larger;color: #ababab;">Informations environnementales</h6>
+            <h3 style="font-size: 55px;font-family: 'Barlow', sans-serif;color: green;margin-top:50px;">24H</h3>
+            <h6 style="font-size: larger;color: #ababab;">A votre commande</h6>
         </div>
         <div class="about_iteam">
-            <h3 style="font-size: 55px;font-family: 'Barlow', sans-serif;color: green;margin-top:50px;">1200+</h3>
-            <h6 style="font-size: larger;color: #ababab;">Informations environnementales</h6>
+            <h3 style="font-size: 55px;font-family: 'Barlow', sans-serif;color: green;margin-top:50px;">25.5K</h3>
+            <h6 style="font-size: larger;color: #ababab;">Capaciter De Travail</h6>
         </div>
         <div class="about_iteam">
-            <h3 style="font-size: 55px;font-family: 'Barlow', sans-serif;color: green;margin-top:50px;">1200+</h3>
-            <h6 style="font-size: larger;color: #ababab;">Informations environnementales</h6>
+            <h3 style="font-size: 55px;font-family: 'Barlow', sans-serif;color: green;margin-top:50px;">+100</h3>
+            <h6 style="font-size: larger;color: #ababab;">Des Groupe Activer</h6>
         </div>
     </div>
 </div>
